--- a/favorite_person/index.html
+++ b/favorite_person/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Favorite person</title>
-    <link rel="stylesheet" href="normilize.css">
+    <link rel="stylesheet" href="normilize.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,57 +35,55 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class="section_text">
-          <p class="grey">
-            "Foxes" and "Vixen" redirect here. For other uses, see Foxes
-            (disambiguation) and Vixen (disambiguation).
-          </p>
-          <p >
-            Foxes are small to medium-sized, omnivorous mammals belonging to
-            several genera of the family Canidae. They have a flattened skull,
-            upright, triangular ears, a pointed, slightly upturned snout, and a
-            long bushy tail ("brush"). <br><br> Twelve species belong to the monophyletic
-            "true fox" group of genus Vulpes. Approximately another 25 current
-            or extinct species are always or sometimes called foxes; these foxes
-            are either part of the paraphyletic group of the South American
-            foxes, or of the outlying group, which consists of the bat-eared
-            fox, gray fox, and island fox.
-          </p>
+      <section class="section_text">
+        <p class="grey">
+          "Foxes" and "Vixen" redirect here. For other uses, see Foxes
+          (disambiguation) and Vixen (disambiguation).
+        </p>
+        <p>
+          Foxes are small to medium-sized, omnivorous mammals belonging to
+          several genera of the family Canidae. They have a flattened skull,
+          upright, triangular ears, a pointed, slightly upturned snout, and a
+          long bushy tail ("brush"). <br /><br />
+          Twelve species belong to the monophyletic "true fox" group of genus
+          Vulpes. Approximately another 25 current or extinct species are always
+          or sometimes called foxes; these foxes are either part of the
+          paraphyletic group of the South American foxes, or of the outlying
+          group, which consists of the bat-eared fox, gray fox, and island fox.
+        </p>
+      </section>
+      <section class="section_list">
+        <div class="block_list">
+          <h2 class="head">All Vulpini species</h2>
+          <ul>
+            <li>Vulpes</li>
+            <li>Vulpes lagopus</li>
+            <li>Vulpes vulpes</li>
+            <li>Vulpes velox</li>
+            <li>Vulpes macrotis</li>
+            <li>Vulpes corsac</li>
+          </ul>
         </div>
-        <div class="section_list">
-          <div class="block_list">
-            <h2 class="head">All Vulpini species</h2>
-            <ul>
-              <li>Vulpes</li>
-              <li>Vulpes lagopus</li>
-              <li>Vulpes vulpes</li>
-              <li>Vulpes velox</li>
-              <li>Vulpes macrotis</li>
-              <li>Vulpes corsac</li>
-            </ul>
-          </div>
-          <div class="block_list">
-            <h2>Some primitive <a>Canidae</a> species</h2>
-            <ul>
-              <li>Urocyon</li>
-              <li>Urocyon cinereoargenteus</li>
-              <li>Urocyon littoralis</li>
-              <li>Urocyon sp.</li>
-              <li>Otocyon</li>
-              <li>Otocyon megalotis</li>
-            </ul>
-          </div>
-          <div class="block_list">
-            <h2>Some Canidae species</h2>
-            <ul>
-              <li>Cerdocyon thous</li>
-              <li>Lycalopex</li>
-              <li>Lycalopex fulvipes</li>
-              <li>Lycalopex griseus</li>
-              <li>Lycalopex vetulus</li>
-            </ul>
-          </div>
+        <div class="block_list">
+          <h2>Some primitive <a>Canidae</a> species</h2>
+          <ul>
+            <li>Urocyon</li>
+            <li>Urocyon cinereoargenteus</li>
+            <li>Urocyon littoralis</li>
+            <li>Urocyon sp.</li>
+            <li>Otocyon</li>
+            <li>Otocyon megalotis</li>
+          </ul>
+        </div>
+        <div class="block_list">
+          <h2>Some Canidae species</h2>
+          <ul>
+            <li>Cerdocyon thous</li>
+            <li>Lycalopex</li>
+            <li>Lycalopex fulvipes</li>
+            <li>Lycalopex griseus</li>
+            <li>Lycalopex vetulus</li>
+          </ul>
         </div>
       </section>
     </main>
